brain/sources/prod-metadata/objects/Onboarding_Token__c/Onboarding_Token__c.object-meta.xml
<CustomObject>
    <label>Onboarding Token</label>
    <nameField>
        <displayFormat>OTN-{0000}</displayFormat>
        <label>Onboarding Token Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>