brain/sources/prod-metadata/objects/Onboarding_Token__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>