brain/sources/prod-metadata/objects/Onboarding_Token__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Tokens</relationshipLabel>
    <relationshipName>Onboarding_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>