brain/sources/prod-metadata/objects/Onboarding_Token__c/fields/Onboarding_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Form_Link__c</fullName>
    <label>Onboarding Form Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>