brain/sources/prod-metadata/objects/Onboarding_Token__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <externalId>true</externalId>
    <label>Token</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>