brain/sources/prod-metadata/objects/Onboarding_Token__c/fields/Used_At__c.field-meta.xml
<CustomField>
    <fullName>Used_At__c</fullName>
    <label>Used At</label>
    <type>DateTime</type>
</CustomField>